# thinking-space

./: .gitignore  .mcp.json.example  CLAUDE.md  CURRENT-STATE.md  README.md  package-lock.json  package.json
dev-docs/: ACP-ANALYSIS.md  ACP-LIBRARY-REFERENCE.md  ACP-REFACTOR-PLAN.md  BUG-FIX-PERMISSION-QUEUE.md  CODEBASE-AUDIT-2024-10-17.md  CURRENT-STATE.md  MISSING-FEATURES-ANALYSIS.md  NEXT-FEATURES-RECOMMENDATION.md  NEXT-STEPS.md  PROGRESS-SUMMARY.md  README.md  SAMPLE-SLASH-COMMANDS.md  SESSION-2-SUMMARY.md  SESSION-3-SUMMARY.md  SESSION-4-SUMMARY.md  TERMINAL-INTEGRATION-DESIGN.md  TESTING-PLAN.md  ideas-for-later.md
dev-docs/archive/: ACP-ANALYSIS.md  ACP-REFACTOR-LESSONS.md  ACP-V2-COMPLETE.md  IMMEDIATE-FIXES.md
dev-docs/archive/2025-10-18-session-work/: CONTEXT-MANAGEMENT-2025-10-18.md  PERMISSION-FIX-2025-10-18.md  SESSION-CONTEXT-FIX-2025-10-18.md  SESSION-PERSISTENCE-COMPLETE.md  SESSION-SUMMARY-2025-10-18.md
dev-docs/archive/session-notes/: ACP-IMPLEMENTATION-ANALYSIS.md  ACP-LOCALSET-FIX.md  CLEANUP-COMPLETE.md  FRONTEND-DISPLAY-FIX.md  FRONTEND-WIRED-UP.md  OAUTH-AUTH-FIX.md  PERMISSION-TOOL-IMPLEMENTATION.md  RACE-CONDITION-FIX.md  TEST-ACP-V2.md  ZED-FEATURE-PARITY-PLAN.md
docs/: ARCHITECTURE.md  MCP-SETUP.md  MVP-SCOPE.md  README.md  STATUS.md  VISION.md
docs/archive/planning/: 00-research-findings.md  CONVERSATION-PERSISTENCE-COMPLETE.md  CONVERSATION-PERSISTENCE-DESIGN.md
src/: package-lock.json  package.json  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: agent-server.js  package-lock.json  package.json
src-tauri/src/: acp_client.rs  auth.rs  commands.rs  conversations.rs  main.rs  mcp_config.rs  sessions.rs  settings.rs  sidecar.rs  spaces.rs  terminal.rs
src-tauri/src/acp_v2/: client.rs  manager.rs  mod.rs
src/src/: App.tsx  index.css  main.tsx
src/src/components/: ArtifactViewer.tsx  ChatArea.test.tsx  ChatArea.tsx  ClaudeMdEditor.tsx  CommandPalette.tsx  ContextWarning.tsx  CreateSpaceModal.tsx  ErrorBoundary.tsx  FileAttachment.tsx  PermissionDialog.tsx  PermissionTestPanel.tsx  SettingsPanel.tsx  SpaceList.tsx  TokenUsageDisplay.tsx  ToolCallDisplay.tsx  WelcomeScreen.tsx
src/src/services/: agentService.test.ts  agentService.ts  authService.ts
src/src/stores/: chatStore.test.ts  chatStore.ts  settingsStore.ts  (+1 more)
(+4 files in other folders)
