[package]
name = "thinking-space"
version = "0.1.0"
description = "A spatial interface for Claude Agent SDK"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
opener = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
# ACP (Agent Client Protocol) support
agent-client-protocol = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
